--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,817 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@import '@radix-ui/colors/black-alpha.css';
+@import '@radix-ui/colors/indigo.css';
+@import '@radix-ui/colors/mauve.css';
+@import '@radix-ui/colors/purple.css';
+@import '@radix-ui/colors/violet.css';
+
+
+
+
+
+
+@layer components {
+    .demo {
+        background-color: red;
+        text-align: center;
+    }
+
+    .cross {
+        transition: all 0.5s;
+    }
+
+    .cross:hover {
+        position: absolute;
+        transform-style: preserve-3d;
+        transform: rotateY(35deg);
+    }
+
+
+    .portfolio {
+        padding: 50px 0;
+    }
+
+    .work-list {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        grid-gap: 40px;
+        margin-top: 50px;
+    }
+
+    .work {
+        border-radius: 10px;
+        position: relative;
+        overflow: hidden;
+
+    }
+
+    .work img {
+        width: 100%;
+        /* height: 70%; */
+        border-radius: 10px;
+        display: block;
+        transition: tranfrom 0.5s;
+    }
+
+    .layer {
+        width: 100%;
+        height: 0%;
+        background: linear-gradient(rgba(0, 0, 0, 0.6), #ff004f);
+        border-radius: 10px;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding: 0 40px;
+        text-align: center;
+        font-size: 15px;
+        transition: height 0.5s;
+
+    }
+
+    .layer h3 {
+        font-weight: 500;
+        margin-bottom: 20px;
+    }
+
+    .layer div {
+        margin-top: 20px;
+        color: #ff004f;
+        text-decoration: none;
+        font-size: 21px;
+        line-height: 60px;
+        background-color: #fff;
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+
+    }
+
+    .work:hover img {
+        transform: scale(1.1);
+    }
+
+    .work:hover .layer {
+        height: 100%;
+    }
+
+
+    /* Services Card */
+    .card {
+        color: var(--clr-neutral-100);
+        background-image: url(https://media.contentapi.ea.com/content/dam/eacom/images/2020/09/ea-featured-image-ea-desktop-beta.jpg.adapt.crop191x100.1200w.jpg);
+        background-size: cover;
+        padding: 10rem 0 0;
+        max-width: 35ch;
+        border-radius: 0.5rem;
+        overflow: hidden;
+        transition: transform 500ms ease;
+    }
+
+    :root {
+        --clr-neutral-900: hsl(207, 19%, 9%);
+        --clr-neutral-100: hsl(0, 0%, 100%);
+        --clr-accent-400: hsl(142, 90%, 61%);
+    }
+
+    .card:hover,
+    .card:focus-within {
+        transform: scale(1.05);
+    }
+
+    .card-content {
+        --padding: 1.5rem;
+        padding: var(--padding);
+        background: linear-gradient(hsl(0 0% 0% / 0),
+                hsl(20 0% 0% / 0.3) 20%,
+                hsl(0 0% 0% / 1));
+    }
+
+    .card-title {
+        position: relative;
+        width: max-content;
+    }
+
+    .card:hover .card-title::after,
+    .card:focus-within .card-title::after {
+        transform: scaleX(1);
+    }
+
+    .card-title::after {
+        content: "";
+        position: absolute;
+        height: 4px;
+        width: calc(100% + var(--padding));
+        left: calc(var(--padding) * -1);
+        bottom: -2px;
+        background: var(--clr-accent-400);
+        transform-origin: left;
+        transition: transform 500ms ease;
+    }
+
+    @media (hover) {
+        .card-content {
+            transform: translateY(65%);
+            transition: transform 500ms ease;
+        }
+
+        .card-content>*:not(.card-title) {
+            opacity: 0;
+            transition: opacity 500ms linear;
+        }
+
+        .card:hover .card-content>*:not(.card-title),
+        .card:focus-within .card-content>*:not(.card-title) {
+            opacity: 1;
+            transition-delay: 700ms;
+        }
+
+        .card:hover .card-content,
+        .card:focus-within .card-content {
+            transform: translateY(0);
+            transition-delay: 500ms;
+        }
+
+        .card:focus-within .card-content {
+            transition-duration: 0ms;
+        }
+
+        .card-title::after {
+            transform: scaleX(0);
+        }
+    }
+
+    .button {
+        cursor: pointer;
+        display: inline-block;
+        text-decoration: none;
+        color: var(--clr-neutral-900);
+        background-color: var(--clr-accent-400);
+        padding: 0.5em 1.25em;
+        border-radius: 0.25rem;
+    }
+
+    .button:hover,
+    .button:focus {
+        background-color: var(--clr-neutral-100);
+    }
+
+    .card-body {
+        color: rgb(255, 255, 255/0.85);
+    }
+
+    @media (prefers-reduced-motion: reduce) {
+
+        *,
+        *::before,
+        *::after {
+            animation-duration: 0.01ms !important;
+            animation-iteration-count: 1 !important;
+            transition-duration: 0.01ms !important;
+            scroll-behavior: auto !important;
+            transition-delay: 0ms !important;
+        }
+    }
+
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+
+
+  .appColor{
+    background-color: #ffb933;
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  
+  .home-header{
+    height: 95vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url("../../assets/images/Hyderabad-Vijayawada-NH65.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    padding: 5rem;
   }
+
+  /* .home-header {
+    position: relative;
+    height: 95vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5rem;
+    overflow: hidden;
+  }
+
+  .video-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+  }
+
+  .header-content {
+    position: relative;
+    z-index: 1;
+    text-align: center;
+  } */
+
+
+  
+  footer {
+    /* background-color: #201E43; */
+    background: linear-gradient(135deg, #201E43, #191a37);
+
+    /* #0e2c45 #191a37 #201E43*/
+    /* padding: 10px 0; */
+    color: #fff;
+  }
+  footer h1 {
+    margin-bottom: 20px;
+    color: #FFFFFF;
+    font-weight: 500;
+    font-style: italic;
+    font-size: 2rem;
+  }
+  footer .img {
+    background-color: #0c2a4d;
+    padding: 15px 20px;
+    border-radius: 5px;
+  }
+  footer .img span {
+    margin-top: 5px;
+  }
+  footer p {
+    font-size: 14px;
+    font-weight: 300;
+    opacity: 0.7;
+    margin-bottom: 20px;
+  }
+  footer h2 {
+    margin-bottom: 20px;
+  }
+  footer li {
+    margin-bottom: 10px;
+    opacity: 0.5;
+  }
+
+  .social-cont{
+    display: flex;
+    
+  }
+
+  .social-cont li a{
+    width: 80px;
+    height: 80px;
+    background-color: #fff;
+    text-align: center;
+    line-height: 80px;
+    font-size: 35px;
+    margin: 0 10px;
+    display: block;
+    border-radius: 50%;
+    position: relative;
+    overflow: hidden;
+    border: 3px solid #ffb933;
+    z-index: 1;
+  }
+  .social-cont li a .icon {
+    position: relative;
+    color: #262626;
+    transition: .5s;
+    z-index: 3;
+  }
+
+  .social-cont li a:hover .icon {
+    color: #fff;
+    transform: rotateY(360deg);
+  }
+
+
+  
+ .social-cont li a:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #f00;
+  transition: .5s;
+  z-index: 2;
 }
+
+ .social-cont li a:hover:before {
+  top: 0;
+}
+
+ .social-cont li:nth-child(1) a:before{
+  background: #3b5999;
+}
+
+ .social-cont li:nth-child(2) a:before{
+  background: #55acee;
+}
+
+ .social-cont li:nth-child(3) a:before {
+  background: #0077b5;
+}
+
+ .social-cont li:nth-child(5) a:before {
+  background: #dd4b39;
+}
+.socialCont li:nth-child(4) a:before {
+  background: #e4405f; /* Instagram color instead of Google+ */
+}
+
+
+  .grid2 {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .grid2 .box {
+    width: 200px;
+    margin: 5px;
+  }
+  .grid2 .box-brand {
+    width: 300px;
+    margin: 5px;
+  }
+  
+  .icon .img {
+    align-items: center;
+  }
+  .icon .img i {
+    padding-right: 5px;
+  }
+  
+  
+  .social-link-p{
+    color: "#ffb933";
+    border: 2px solid  #914F1E;
+    /* border: 2px solid  #81562b; */
+    border-radius: 5px;
+
+  }
+
+  .footer-link{
+color: #FFFFFF;
+cursor: pointer;
+  }
+  .footer-link a:hover{
+color: #ff7e1d;
+cursor: pointer;
+  }
+  
+  
+  /* ################### Navigation Menu Demo */
+  
+  button,
+  p {
+    all: unset;
+  }
+  
+  .NavigationMenuRoot {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    z-index: 1;
+    border: 2px solid  red;
+  }
+  
+  .NavigationMenuList {
+    display: flex;
+    justify-content: center;
+    background-color: #ffb933;
+    padding: 4px;
+    border-radius: 6px;
+    list-style: none;
+    /* box-shadow: 0 2px 10px var(--black-a7); */
+    margin: 0;
+  }
+  
+  .NavigationMenuTrigger,
+  .NavigationMenuLink {
+    padding: 8px 12px;
+    outline: none;
+    user-select: none;
+    font-weight: 500;
+    line-height: 1;
+    border-radius: 4px;
+    font-size: 15px;
+    color: var(--violet-11);
+  }
+  .NavigationMenuTrigger:focus,
+  .NavigationMenuLink:focus {
+    box-shadow: 0 0 0 2px var(--violet-7);
+  }
+  .NavigationMenuTrigger:hover,
+  .NavigationMenuLink:hover {
+    background-color: var(--violet-3);
+  }
+  
+  .NavigationMenuTrigger {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2px;
+    border: 2px solid blue;
+  }
+  
+  .NavigationMenuLink {
+    display: block;
+    text-decoration: none;
+    font-size: 15px;
+    line-height: 1;
+  }
+  
+  .NavigationMenuContent {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    animation-duration: 250ms;
+    animation-timing-function: ease;
+  }
+  .NavigationMenuContent[data-motion='from-start'] {
+    animation-name: enterFromLeft;
+  }
+  .NavigationMenuContent[data-motion='from-end'] {
+    animation-name: enterFromRight;
+  }
+  .NavigationMenuContent[data-motion='to-start'] {
+    animation-name: exitToLeft;
+  }
+  .NavigationMenuContent[data-motion='to-end'] {
+    animation-name: exitToRight;
+  }
+  @media only screen and (min-width: 600px) {
+    .NavigationMenuContent {
+      width: auto;
+    }
+  }
+  
+  .NavigationMenuIndicator {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    height: 10px;
+    top: 100%;
+    overflow: hidden;
+    z-index: 1;
+    transition: width, transform 250ms ease;
+  }
+  .NavigationMenuIndicator[data-state='visible'] {
+    animation: fadeIn 200ms ease;
+  }
+  .NavigationMenuIndicator[data-state='hidden'] {
+    animation: fadeOut 200ms ease;
+  }
+  
+  .NavigationMenuViewport {
+    position: relative;
+    transform-origin: top center;
+    margin-top: 10px;
+    width: 100%;
+    background-color: white;
+    border-radius: 6px;
+    overflow: hidden;
+    box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
+    height: var(--radix-navigation-menu-viewport-height);
+    transition: width, height, 300ms ease;
+  }
+  .NavigationMenuViewport[data-state='open'] {
+    animation: scaleIn 200ms ease;
+  }
+  .NavigationMenuViewport[data-state='closed'] {
+    animation: scaleOut 200ms ease;
+  }
+  @media only screen and (min-width: 600px) {
+    .NavigationMenuViewport {
+      width: var(--radix-navigation-menu-viewport-width);
+    }
+  }
+  
+  .List {
+    display: grid;
+    padding: 22px;
+    margin: 0;
+    column-gap: 10px;
+    list-style: none;
+    
+  }
+  @media only screen and (min-width: 600px) {
+    .List.one {
+      width: 500px;
+      grid-template-columns: 0.75fr 1fr;
+    }
+    .List.two {
+      width: 600px;
+      grid-auto-flow: column;
+      grid-template-rows: repeat(3, 1fr);
+    }
+  }
+  
+  .ListItemLink {
+    display: block;
+    outline: none;
+    text-decoration: none;
+    user-select: none;
+    padding: 12px;
+    border-radius: 6px;
+    font-size: 15px;
+    line-height: 1;
+  }
+  .ListItemLink:focus {
+    box-shadow: 0 0 0 2px var(--violet-7);
+  }
+  .ListItemLink:hover {
+    background-color: var(--mauve-3);
+  }
+  
+  .ListItemHeading {
+    font-weight: 500;
+    line-height: 1.2;
+    margin-bottom: 5px;
+    color: var(--violet-12);
+  }
+  
+  .ListItemText {
+    color: var(--mauve-11);
+    line-height: 1.4;
+    font-weight: initial;
+  }
+  
+  .Callout {
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(135deg, var(--purple-9) 0%, var(--indigo-9) 100%);
+    border-radius: 6px;
+    padding: 25px;
+    text-decoration: none;
+    outline: none;
+    user-select: none;
+  }
+  .Callout:focus {
+    box-shadow: 0 0 0 2px var(--violet-7);
+  }
+  
+  .CalloutHeading {
+    color: white;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.2;
+    margin-top: 16px;
+    margin-bottom: 7px;
+  }
+  
+  .CalloutText {
+    color: var(--mauve-4);
+    font-size: 14px;
+    line-height: 1.3;
+  }
+  
+  .ViewportPosition {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    top: 100%;
+    left: 0;
+    perspective: 2000px;
+  }
+  
+  .CaretDown {
+    position: relative;
+    color: var(--violet-10);
+    top: 1px;
+    transition: transform 250ms ease;
+  }
+  [data-state='open'] > .CaretDown {
+    transform: rotate(-180deg);
+  }
+  
+  .Arrow {
+    position: relative;
+    top: 70%;
+    background-color: white;
+    width: 10px;
+    height: 10px;
+    transform: rotate(45deg);
+    border-top-left-radius: 2px;
+  }
+
+  .leader1img{
+    background-image: url("../../public/leaders/cdFakir.jpeg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  .leader2img{
+    background-image: url("../../public/leaders/Amer.jpg");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: #fff;
+  }
+  
+  @keyframes enterFromRight {
+    from {
+      opacity: 0;
+      transform: translateX(200px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+  
+  @keyframes enterFromLeft {
+    from {
+      opacity: 0;
+      transform: translateX(-200px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+  
+  @keyframes exitToRight {
+    from {
+      opacity: 1;
+      transform: translateX(0);
+    }
+    to {
+      opacity: 0;
+      transform: translateX(200px);
+    }
+  }
+  
+  @keyframes exitToLeft {
+    from {
+      opacity: 1;
+      transform: translateX(0);
+    }
+    to {
+      opacity: 0;
+      transform: translateX(-200px);
+    }
+  }
+  
+  @keyframes scaleIn {
+    from {
+      opacity: 0;
+      transform: rotateX(-30deg) scale(0.9);
+    }
+    to {
+      opacity: 1;
+      transform: rotateX(0deg) scale(1);
+    }
+  }
+  
+  @keyframes scaleOut {
+    from {
+      opacity: 1;
+      transform: rotateX(0deg) scale(1);
+    }
+    to {
+      opacity: 0;
+      transform: rotateX(-10deg) scale(0.95);
+    }
+  }
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  
+  @keyframes fadeOut {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
+  }
+  
+  .cta {
+    position: relative;
+    margin: auto;
+    padding: 19px 22px;
+    transition: all 0.2s ease;
+  }
+  
+  .cta:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    border-radius: 28px;
+    background: rgba(var(--primary), 0.5);
+    width: 56px;
+    height: 56px;
+    transition: all 0.3s ease;
+  }
+  
+  .cta span {
+    position: relative;
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 900;
+    letter-spacing: 0.25em;
+    text-transform: uppercase;
+    vertical-align: middle;
+  }
+  
+  .cta svg {
+    position: relative;
+    top: 0;
+    margin-left: 10px;
+    fill: none;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke: var(--color);
+    stroke-width: 2;
+    transform: translateX(-5px);
+    transition: all 0.3s ease;
+  }
+  
+  .cta:hover:before {
+    width: 100%;
+    background: rgba(var(--primary), 1);
+  }
+  
+  .cta:hover svg {
+    transform: translateX(0);
+  }
+  
+  .cta:active {
+    transform: scale(0.96);
+  }
+  /* Footer Style  */
