--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -819,3 +819,6 @@ cursor: pointer;
   /* Footer Style  */
 
 
+.about-hero-back-image{
+  background-image: url("https://images.unsplash.com/photo-1487132906645-8e0fbba067e0?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+}
