--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -7,11 +7,11 @@
    */
 
    .navbar {
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     right: 0;
-    background-color: transparent;
+    background-color: #ffb933;
     transition: background-color 0.3s ease, transform 0.3s ease;
     z-index: 1000;
   }
