--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -12,7 +12,7 @@
     left: 0;
     right: 0;
     /* background-color: #ffa15e; */
-    background-color: transparent;
+    background-color: #0f2852;
     transition: background-color 0.3s ease, transform 0.3s ease;
     z-index: 1000;
         padding: 0.8rem 1rem;
